# agentic-news-scraper

./: 2025-07-26_20-40-30_news_article.md  2025_news_article.md  README.md  pyproject.toml
src/news_scrapper/: crew.py  main.py
src/news_scrapper/config/: agents.yaml  tasks.yaml
